# pmc

./: .gitattributes  .gitignore  .gitlab-ci.yml  .harness-ci.yml  Cargo.toml  LICENSE.md  Maidfile.toml  README.md  build.rs  cpu_test.rs  errors.todo  example.hcl  pmc.service  test.js
.cargo/: config.toml
.maid/: build.toml
lib/: bridge.cc  fork.cc  process.cc  psutil.cc
lib/include/: bridge.h  fork.h  process.h  psutil.h  rust.h
maid/: build.toml
scripts/: install.sh
src/: cli.rs  cmd.cc  file.rs  globals.rs  helpers.rs  id.rs  lib.rs  log.rs  main.rs  process.rs  structs.rs
src/cc/: bridge.cc  fork.cc  process.cc
src/cli/: args.rs  import.rs  internal.rs  mod.rs  server.rs
src/config/: mod.rs  structs.rs
src/daemon/: api.rs  fork.rs  log.rs  mod.rs  pid.rs
src/daemon/api/: docs.rs  fairing.rs  helpers.rs  mod.rs  routes.rs  structs.rs
src/daemon/api/docs/: index.html
src/daemon/static/: index.html  scalar.js  style.css
src/include/: bridge.h  cmd.h  cxx.h  fork.h  process.h
src/process/: dump.rs  hash.rs  http.rs  id.rs  log.rs  mod.rs  unix.rs
src/process/unix/: cpu.rs  env.rs  memory.rs  mod.rs  process_info.rs  process_list.rs
src/webui/: assets.rs  astro.config.mjs  links.ts  mod.rs  npm-shrinkwrap.json  package.json  pnpm-lock.yaml  tailwind.config.mjs  tsconfig.json
src/webui/src/: api.ts  consts.ts  helpers.ts  store.ts  styles.css
src/webui/src/components/: base.astro  navbar.astro
src/webui/src/components/react/: header.tsx  index.tsx  loader.tsx  login.tsx  modal.tsx  rename.tsx  servers.tsx  status.tsx  view.tsx
src/webui/src/pages/: docs.astro  index.astro  login.astro  servers.astro  status.astro  view.astro
