[package]
name = "pmc"
version = "1.8.1"
edition = "2021"
license = "MIT"
repository = "https://lab.themackabu.dev/self/pmc"
description = "PMC is a simple and easy to use PM2 alternative"

[build-dependencies]
tar = "0.4.40"
chrono = "0.4.31"
flate2 = "1.0.28"
cxx-build = "1.0.112"

[dependencies]
ron = "0.8.1"
log = "0.4.20"
toml = "0.8.8"
home = "0.5.9"
ryu = "1.0.16"
clap = "4.4.12"
cxx = "1.0.112"
bytes = "1.5.0"
tera = "1.19.1"
regex = "1.10.2"
libc = "0.2.151"
anyhow = "1.0.78"
colored = "2.1.0"
macros-rs = "0.5.0"
termcolor = "1.4.0"
once_cell = "1.19.0"
env_logger = "0.10.1"
merkle_hash = "3.5.0"
lazy_static = "1.4.0"
prometheus = "0.13.3"
include_dir = "0.7.3"
serde_json = "1.0.109"
simple-logging = "2.0.2"
utoipa-rapidoc = "2.0.0"
pretty_env_logger = "0.5.0"
utoipa-swagger-ui = "5.0.0"
clap-verbosity-flag = "2.1.2"
global_placeholders = "0.1.0"

tokio = { version = "1.35.1", features = ["full"] }
rocket = { version = "0.5.0", features = ["json"] }
psutil = { version = "3.2.2", features = ["serde"] }
tabled = { version = "0.15.0", features = ["ansi"] }
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0.193", features = ["derive"] }
nix = { version = "0.27.1", features = ["process", "signal"] }
utoipa = { version = "4.1.0", features = ["serde_yaml", "non_strict_integers"] }
update-informer = "1.1.0"
inquire = "0.7.5"


[dependencies.reqwest]
version = "0.11.23"
default-features = false
features = [
   "blocking", 
   "json", 
   "rustls-tls", 
]

[build-dependencies.reqwest]
version = "0.11.23"
default-features = false
features = [
   "blocking", 
   "rustls-tls", 
]
