[package]
name = "pmc"
version = "2.0.0"
edition = "2021"
license = "MIT"
repository = "https://lab.themackabu.dev/self/pmc"
description = "PMC is a simple and easy to use PM2 alternative"

[build-dependencies]
tar = "0.4.41"
chrono = "0.4.38"
flate2 = "1.0.31"
cxx-build = "1.0.126"

[dependencies]
ron = "0.8.1"
log = "0.4.22"
toml = "0.8.19"
home = "0.5.9"
ryu = "1.0.18"
clap = "4.5.16"
cxx = "1.0.126"
bytes = "1.7.1"
tera = "1.20.0"
regex = "1.10.6"
libc = "0.2.156"
anyhow = "1.0.86"
colored = "2.1.0"
inquire = "0.7.5"
hcl-rs = "0.18.0"
macros-rs = "0.5.2"
termcolor = "1.4.1"
once_cell = "1.19.0"
env_logger = "0.10.2"
merkle_hash = "3.7.0"
lazy_static = "1.5.0"
prometheus = "0.13.4"
include_dir = "0.7.4"
serde_json = "1.0.125"
simple-logging = "2.0.2"
utoipa-rapidoc = "2.0.0"
update-informer = "1.1.0"
pretty_env_logger = "0.5.0"
utoipa-swagger-ui = "5.0.0"
clap-verbosity-flag = "2.2.1"
global_placeholders = "0.1.0"

tokio = { version = "1.39.2", features = ["full"] }
rocket = { version = "0.5.1", features = ["json"] }
psutil = { version = "3.3.0", features = ["serde"] }
tabled = { version = "0.15.0", features = ["ansi"] }
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.208", features = ["derive"] }
nix = { version = "0.27.1", features = ["process", "signal"] }
utoipa = { version = "4.2.3", features = ["serde_yaml", "non_strict_integers"] }
os_info = "3.8.2"

[dependencies.reqwest]
version = "0.11.27"
default-features = false
features = [
   "blocking", 
   "json", 
   "rustls-tls", 
]

[build-dependencies.reqwest]
version = "0.11.27"
default-features = false
features = [
   "blocking", 
   "rustls-tls", 
]
